--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,9 @@ name = "pypi"
 
 [packages]
 antlr4-tools = "*"
-antlr4-python3-runtime = "*"
 numpy = "*"
+networkx = "*"
+antlr4-python3-runtime = "==4.11.1"
 
 [dev-packages]
 
