--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,9 @@ name = "pypi"
 antlr4-tools = "*"
 numpy = "*"
 networkx = "*"
-antlr4-python3-runtime = "==4.11.1"
+antlr4-python3-runtime = "*"
+scipy = "*"
+matplotlib = "*"
 
 [dev-packages]
 
